css/site.css
/* https://stackoverflow.com/questions/73555768/how-to-change-width-of-content-area-in-mdbook */
:root {
  --content-max-width: 90%;
}
.content a[href]:not(:is(h1, h2, h3, h4, h5, h6)) {
  white-space: nowrap;
}

#menu-bar {
  font-style: italic;
}

.docversions a.displayed {
  font-weight:bold;
  background-color:red;
  outline: thin solid red;
  color:white;
  text-shadow: 1px 1px black;
}

code {
  font-family: Consolas, "Ubuntu Mono", Menlo, "DejaVu Sans Mono", monospace, monospace !important;
}
pre > code.hljs {
  border:thin solid lightgrey;
}
pre > code.language-cli {
  border:none;
  font-weight: bold;
}
pre > code.language-journal {
  border:thin solid green;
  background-color: greenyellow;
  color:black !important;
}
pre > code.language-csv {
  border:thin solid darkred;
  background-color: lightpink;
  color:black !important;
}
pre > code.language-rules {
  border:thin solid palevioletred;
  background-color: #fdd;
  color:black !important;
}
pre > code.language-timeclock {
  border:thin solid darkblue;
  background-color: lightblue;
  color:black !important;
}
pre > code.language-timedot {
  border:thin solid darkcyan;
  background-color: lightcyan;
  color:black !important;
}

/* .screenshot-right { 
  float:right; 
  clear:right;
  max-width:200px;
  text-align:right;
} */

#footer {
    text-align: center;
}

.right { 
  float:right; 
  clear:right;
  max-width:200px; 
  margin:0 0 1em 1em; 
}

.highslide-caption {
  color:white; 
  background-color:black;
}

.highslide img {
  border:none;
}

.clip-button {
    display:none;
}

